--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -25,15 +25,30 @@
 			 	<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 			 		<li class="nav-item">
-			 			<a class="nav-link active text-light"  aria-current="page" href="/">Главная</a>
+			 			<a class="nav-link active text-light"  aria-current="page" href="/">Галерея</a>
 			 		</li>
+		        	{% if user.is_authenticated %}
 		        	<li class="nav-item">
-		          		<a class="nav-link text-light" href="#">Топ - 10</a>
-		        	</li>
-		        	<li class="nav-item">
-		          		<a class="nav-link disabled text-light" href="#">Мои фотографии</a>
+		        		<a class="nav-link text-light" href="{% url 'upload' %}">
+		        		Добавить фото</a>
 		        	</li>
 
+		        	<li class="nav-item">
+		        		<form method="get" action="{% url 'personal_photo' user.id %}">
+							<button type="submit" class="nav-link text-light" style="background-color: #028E9B;">
+								<input type="hidden" name="user" value="{{ user.id }}">
+								Мои фотографии
+							</button>
+						</form>
+		        	</li>
+					{% else %}
+					<li class="nav-item">
+		        		<a class="nav-link disabled text-light" href="#">Добавить фото</a>
+		        	</li>
+					<li class="nav-item">
+		        		<a class="nav-link disabled text-light" href="#">Мои фотографии</a>
+		        	</li>
+		        	{% endif %}
 <!--- Поиск по сайту !--->
 		        	<li class="nav-item">
 		        		<div class="d-flex">
@@ -54,11 +69,11 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 								Добро пожаловать, {{ user.first_name }}  {{ user.last_name }}!
-								<img src="{{ user.photo_small.url }}" class="rounded-circle">
+								<img src="" class="rounded-circle">
 						    </a>
 						    
 						    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-						        <li><a class="dropdown-item" href="user/{{user.id}}">Профиль</a></li>
+						        <li><a class="dropdown-item" href="{% url 'personal_account' user.id %}">Профиль</a></li>
 						        <li><a class="dropdown-item" href="upload">Добавить фото</a></li>
 						        <li><hr class="dropdown-divider"></li>
 						        <li><a class="dropdown-item" href="#">
