--- a/photo_app/templates/photo_app/list_of_photos.html
+++ b/photo_app/templates/photo_app/list_of_photos.html
@@ -7,9 +7,18 @@
 <div class="container-fluid">
 	<div class="d-flex justify-content-between">
 
-
+		
 		{% if page_obj.number %}
-		<div class="p-6"><h1 id="page-title" value="{{page_obj.number}}"> Галерея страница {{page_obj.number}}</h1></div>
+			{% if personal_list == True %}
+				<div class="p-6">
+					<h1 id="personal-title" value="{{page_obj.number}}"> Мои фото страница {{page_obj.number}}</h1>
+				</div>
+			{% else %}
+				<div class="p-6">
+					<h1 id="page-title" value="{{page_obj.number}}"> Галерея страница {{page_obj.number}}</h1>
+				</div>
+			{% endif %}
+		
 		{% endif %}
 		
 		<div class="p-3">
@@ -41,7 +50,9 @@
 
 				<div class="card-body">
 
-					<h5 class="card-title"><a class="link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white" href="{% url 'detail' p.id %}">{{p.title}}</a></h5>
+					<h5 class="card-title">
+						<a class="link-offset-2 link-underline link-underline-opacity-0 text-dark bg-white" href="{% url 'photo_app:detail' p.id %}">{{p.title}}</a>
+					</h5>
 
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item" style="border-color: #E5E5E5;" id = "firstli">
@@ -64,12 +75,22 @@
                                 	<input type="hidden" name="photo" value="{{ p.id }}">
                                 	<input type="hidden" name="user" value="{{ user.id }}">
                                     <button type="submit" class="btn btn-outline-light" style="background-color: #028E9B;">
-									<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-heart" viewBox="0 0 16 16">
-										<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12ZM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Z"/>
-					 					<path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
-					 				</svg>
-					 				<span class="badge text-light" style="background-color: #028E9B;" id="voices">{{p.voices.all.count}}</span>
+										<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-heart" viewBox="0 0 16 16">
+											<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12ZM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Z"/>
+					 						<path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+					 					</svg>
+					 					<span class="badge text-light" style="background-color: #028E9B;" id="voices">{{p.voices.all.count}}</span>
 				 					</button>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <button type="button" class="btn btn-outline-light" style="background-color: #028E9B;">
+
+						 			<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-text" viewBox="0 0 16 16">
+						 				<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+						 				<path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+						 			</svg>
+						 			<span class="badge text-light" style="background-color: #028E9B;" id="comments">{{p.comments.all.count}}</span>
+						 		</button>
                                 </div>
                                 
                             </div>
@@ -125,13 +146,19 @@
 <script>
 	$(document).ready(function(){
 		$("select.current_sorting").change(function(){
-			let val = document.querySelector('h1#page-title').getAttribute("value");
+			if ("{{personal_list}}" == "True"){
+				let p_list = "True";
+				let val = document.querySelector('h1#personal-title').getAttribute("value");
+			} else {
+				let val = document.querySelector('h1#page-title').getAttribute("value");}
+			
 			$.ajax({
 				url: '',
 				method: 'get',
 				dataType: 'json',
                 data: {orderby: document.querySelector('select.current_sorting').value, orderbysearch: orderbysearch.value,
-                page: val},
+                page: val,
+                personal_list: p_list,},
 			    success: content_replace,
 			});
 		});
@@ -149,6 +176,7 @@
 				data: {
 					page: this.textContent, orderby: document.querySelector('select.current_sorting').value,
 					orderbysearch: orderbysearch.value,
+					personal_list: document.querySelector('h1#personal-title').value,
 				}, 
 			    success: content_replace,
 			});
