Added SO for personal_list, fixed sorting error

--- a/photo_app/templates/photo_app/base.html
+++ b/photo_app/templates/photo_app/base.html
@@ -34,7 +34,7 @@
 		        	</li>
 
 		        	<li class="nav-item">
-		        		<form method="get" action="">
+		        		<form method="get" action="{% url 'photo_app:home' %}">
 							<button type="submit" class="nav-link text-light" style="background-color: #028E9B;">
 								<input type="hidden" name="personal_list" value="True">
 								Мои фотографии
