--- a/photo_app/templates/photo_app/list_of_photos.html
+++ b/photo_app/templates/photo_app/list_of_photos.html
@@ -73,7 +73,6 @@
                             <div class="row g-0 justify-content-center">
                                 <div class="col-6 col-md-4">
                                 	<input type="hidden" name="photo" value="{{ p.id }}">
-                                	<input type="hidden" name="user" value="{{ user.id }}">
                                     <button type="submit" class="btn btn-outline-light" style="background-color: #028E9B;">
 										<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-square-heart" viewBox="0 0 16 16">
 											<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12ZM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Z"/>
@@ -146,19 +145,21 @@
 <script>
 	$(document).ready(function(){
 		$("select.current_sorting").change(function(){
+
 			if ("{{personal_list}}" == "True"){
-				let p_list = "True";
-				let val = document.querySelector('h1#personal-title').getAttribute("value");
+				var p_list = "True";
+				var node = "h1#personal-title";
 			} else {
-				let val = document.querySelector('h1#page-title').getAttribute("value");}
-			
+				var node = "h1#page-title";
+			}
 			$.ajax({
 				url: '',
 				method: 'get',
 				dataType: 'json',
-                data: {orderby: document.querySelector('select.current_sorting').value, orderbysearch: orderbysearch.value,
-                page: val,
-                personal_list: p_list,},
+                data: {orderby: document.querySelector('select.current_sorting').value,
+                	orderbysearch: orderbysearch.value,
+                	page: document.querySelector(node).getAttribute("value"),
+                	personal_list: p_list,},
 			    success: content_replace,
 			});
 		});
@@ -173,8 +174,8 @@
 				url: '',
 				method: 'get',
 				dataType: 'json',
-				data: {
-					page: this.textContent, orderby: document.querySelector('select.current_sorting').value,
+				data: {page: this.textContent,
+					orderby: document.querySelector('select.current_sorting').value,
 					orderbysearch: orderbysearch.value,
 					personal_list: document.querySelector('h1#personal-title').value,
 				}, 
@@ -196,8 +197,8 @@
 				url: '',
 				method: 'get',
 				dataType: 'json',
-				data: {
-					orderbysearch: orderbysearch.value,  orderby: document.querySelector('select.current_sorting').value,
+				data: {	orderbysearch: orderbysearch.value,
+					orderby: document.querySelector('select.current_sorting').value,
 					page: val},
 
 			    success: content_replace,
